--- a/index.html
+++ b/index.html
@@ -1,19 +1,56 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <!-- Meta -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#6dd3ff" />
+    <meta
+      name="description"
+      content="A modern interactive experience built with React & Vite - clean, fast, and responsive."
+    />
 
-<head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
-</head>
+    <!-- Open Graph (for sharing preview) -->
+    <meta property="og:title" content="Vega Spin App" />
+    <meta
+      property="og:description"
+      content="Enjoy a modern interactive experience with smooth design and vibrant animations."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/preview.png" />
 
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
-</body>
+    <!-- Font & Icons -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
 
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
+    <!-- Title -->
+    <title>Vega Spin App</title>
+
+    <!-- Optional: subtle background to prevent flash -->
+    <style>
+      body {
+        background: linear-gradient(120deg, #6dd3ff, #a36bff);
+        margin: 0;
+        font-family: "Poppins", system-ui, -apple-system, "Segoe UI", Roboto,
+          "Helvetica Neue", Arial, sans-serif;
+      }
+    </style>
+  </head>
+
+  <body>
+    <noscript>
+      <strong>This site works best with JavaScript enabled.</strong>
+    </noscript>
+
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
